# VeloxEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  TrikytaEngine3D.sln  count.sh  gitview.sh
Core/: CMakeLists.txt  Core.hpp
Core/DataStructure/: AVL.hpp  ArrayView.hpp  BasicVector.hpp  Bitset.hpp  FixedString.hpp  GUID.hpp  HashFunction.hpp  HashMap.hpp  HashMapHelper.hpp  HashMapIterator.hpp  HashMapLinkedList.hpp  HashPolicies.hpp  List.hpp  List.inl  Map.hpp  Queue.hpp  RandomAccessIterator.hpp  SingleList.hpp  Stack.hpp  String.hpp  String2.hpp  StringBuffer.hpp  StringView.hpp  Tuple.hpp  Utils.hpp  Vector.hpp  VectorBase.hpp
Core/DataStructure/Array/: Array.hpp
Core/DataStructure/BinaryTrees/: AVL.hpp  AVL.inl  BST.hpp  BST.inl  BinaryTree.hpp  BinaryTree.inl  RedBlackTree.hpp  RedBlackTree.inl
Core/DataStructure/Bitset/: Bitset.cpp
Core/DataStructure/Function/: Function.hpp
Core/DataStructure/HashMap/: HashFunction.hpp  HashMap.hpp  HashMap.inl  Map.inl
Core/DataStructure/PackedArray/: PackedArray.hpp  PackedArray.inl
Core/DataStructure/Queue/: Queue.hpp
Core/DataStructure/Stack/: Stack.hpp
Core/DataStructure/StaticBitset/: StaticBitset.cpp  StaticBitset.hpp
Core/DataStructure/String/: String.hpp  String.inl  String2.hpp
Core/DataStructure/Tuple/: Pair.hpp
Core/DataStructure/Utils/: Utils.hpp
Core/DataStructure/Vector/: Vector.hpp  Vector.inl
Core/ECS/Archetype/: Archetype.cpp
Core/ECS/Component/: BaseComponent.cpp  BaseComponent.hpp
Core/ECS/ComponentGroup/: ComponentGroup.hpp
Core/ECS/ECS/: ECS.cpp
Core/ECS/Entity/: Entity.hpp
Core/ECS/World/: World.cpp
Core/FileSystem/AsyncFile/: AsyncFileManager.cpp  AsyncFileManager.hpp
Core/FileSystem/Directory/: Directory.cpp  Directory.hpp
Core/FileSystem/File/: File.cpp  File.hpp
Core/FileSystem/Utils/: Utility.hpp
Core/Math/: Common.hpp  MathUtils.hpp  Maths.hpp  Matrix.hpp  Matrix4x4.hpp  Quaternion.hpp  Vec1.inl  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vec4f_simd.hpp  Vec4i_simd.hpp  VecN.hpp
Core/Memory/: AllocatorMisc.hpp  Common.hpp  GenericAllocator.hpp  LocalAllocator.hpp  Memory.hpp
Core/Memory/RefCounter/: RefCounter.hpp
Core/Memory/Utils/: Utils.hpp
Core/Misc/: Logging.hpp  Singleton.hpp  UtilityConcepts.hpp
Core/Misc/Defines/: Common.hpp  DataStructure.hpp  Debug.hpp  PlatformSIMDInclude.hpp  Types.hpp
Core/Platform/: CompilerIntrin.hpp  Platform.hpp  PlatformInclude.hpp  PlatformSIMDInclude.hpp
Core/Profiler/: Profiler.hpp
Core/TaskSystem/ParallelTask/: ParallelTask.hpp  TaskSplitters.hpp
Core/TaskSystem/Task/: Task.hpp
Core/TaskSystem/TaskExecutor/: TaskExecutor.cpp  TaskExecutor.hpp
Core/TaskSystem/TaskManager/: TaskManager.hpp
Core/TaskSystem/WorkStealingQueue/: WorkStealingQueue.cpp  WorkStealingQueue.hpp
Core/Utils/: ByteBuffer.hpp  Color.hpp  Common.hpp  Image.cpp  Image.hpp  Logging.hpp  Memory.hpp
Engine/: CMakeLists.txt  Engine.vcxproj  benchmark.json
Engine/Core/Context/: Context.cpp  Context.hpp  Context_Win32.cpp  Context_X11.cpp  Extensions.hpp
Engine/Core/ECS/: Common.hpp
Engine/Core/Event/: Event.hpp
Engine/Core/Profiler/: Profiler.hpp
Engine/Core/Window/: Window.cpp  Window.hpp  Window_Win32.cpp  Window_X11.cpp
Engine/RenderAPI/: Common.hpp
Engine/RenderAPI/FrameBuffer/: FBO.cpp  FBO.hpp
Engine/RenderAPI/General/: GLContext.hpp
Engine/RenderAPI/GlobalState/: GLState.cpp  GLState.hpp
Engine/RenderAPI/RenderBuffer/: RBO.cpp  RBO.hpp
Engine/RenderAPI/Shader/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Engine/RenderAPI/Texture/: Texture.cpp  Texture.hpp
Engine/RenderAPI/VertexArray/: VAO.cpp  VAO.hpp  VAODef.hpp
Engine/RenderAPI/VertexBuffer/: VBO.hpp  VBO.inl
Engine/RenderEngine/Loader/: MaterialLoader.cpp  MaterialLoader.hpp  MeshLoader.cpp  MeshLoader.hpp
Engine/RenderEngine/Materials/: Material.cpp  Material.hpp
Engine/Renderer/Common/: Common.cpp  Common.hpp
Engine/Renderer/Materials/: Material.cpp  Material.hpp
Engine/Renderer/MeshLoader/: MaterialLoader.cpp  MaterialLoader.hpp  MeshLoader.cpp  MeshLoader.hpp
Engine/Renderer/ShaderParser/: ShaderParser.cpp  ShaderParser.hpp
Engine/Tests/: Main.cpp  Main2.cpp  ShaderValidator.hpp  TestingString.cpp  ThreadBarrier.hpp
Engine/res/Shader/: SimpleShader.fs  SimpleShader.vs  SimpleShaderInstanced.vs  cam.fs  cam.vs  cam_instanced.vs  screen.fs  screen.vs  shader_atoms.glsl  shadow_mapping_depth.vs  texture.fs  texture.vs
Renderer/: CMakeLists.txt  Common.hpp  Makefile  Renderer  Renderer.vcxproj  cpp.hint  cube.hpp  main.cpp  pch.h
Renderer/Application/Shaders/: shader.frag
Renderer/Backend/: Backend.hpp  CMakeLists.txt  Common.hpp  RenderBackend.cpp  RenderBackend.hpp  Renderer.cpp  Renderer.hpp  pch.cpp
Renderer/Backend/Buffer/: Buffer.cpp  Buffer.hpp
Renderer/Backend/Buffers/: Buffer.cpp  Buffer.hpp  RingBuffer.cpp  RingBuffer.hpp
Renderer/Backend/CommandList/: CommandList.cpp  CommandList.hpp  CommandPool.cpp  CommandPool.hpp
Renderer/Backend/Common/: Globals.hpp  Utils.hpp
Renderer/Backend/Descriptor/: DescriptorSetLayout.hpp
Renderer/Backend/Descriptors/: DescriptorSetAlloc.cpp  DescriptorSetAlloc.hpp  DescriptorSetLayout.hpp
Renderer/Backend/Images/: Image.cpp  Image.hpp  ImageHelper.hpp  Sampler.cpp  Sampler.hpp
Renderer/Backend/MemoryAllocator/: MemoryAllocator.cpp  MemoryAllocator.hpp
Renderer/Backend/Misc/: stb_image.cpp
Renderer/Backend/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  Pipeline.cpp  Pipeline.hpp
Renderer/Core/: Renderer.cpp  Renderer.hpp
Renderer/Frontend/: CMakeLists.txt  main.cpp
Renderer/Misc/: stb_image.cpp  stb_image.hpp
Renderer/Shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
Renderer/Window/: Event.hpp  Window.cpp  Window.hpp  Window_Win32.cpp  Window_X11.cpp
Renderer/zApp/: Camera.hpp  Shared.hpp  raster.cpp  raster.hpp  raytracing.cpp  raytracing.hpp  rt2.cpp
Tests/: CMakeLists.txt  main.cpp  test1.cpp
Tests/Benchmarks/: CMakeLists.txt
Tests/DataStructure/: Vector.cpp
Tests/Tests/: CMakeLists.txt
(+775 files in other folders)
